add large sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
     --color-secondary: #c714c7;
     --color-accent: #c714c7;
     --color-white: #fff;
+    --color-danger:red;
     --shadow-dark: rgba(0, 0, 0, 0.3);
     --shadow-medium: rgba(0, 0, 0, 0.2);
     --shadow-light: rgba(0, 0, 0, 0.1);
